Change redirect to unboxingsolutions.nl

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=http://pruijs.nl">
+        <meta http-equiv="refresh" content="1;url=http://unboxingsolutions.nl">
         <script type="text/javascript">
-            window.location.href = "http://pruijs.nl"
+            window.location.href = "http://unboxingsolutions.nl"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow the <a href='http://pruijs.nl'>link to pruijs.nl</a>
+        If you are not redirected automatically, follow the <a href='http://unboxingsolutions.nl'>link to unboxingsolutions.nl</a>
     </body>
 </html>
